# Kanban-Board

./: .gitignore  Makefile  README.md  docker-compose.yml
client/: Dockerfile  package-lock.json  package.json
client/src/: App.tsx  index.css  index.tsx
client/src/api/: auth.ts  boards.ts  client.ts  columns.ts  task.ts  users.ts
client/src/components/AuthModal/: AuthModal.css  AuthModal.tsx
client/src/context/: AuthContext.tsx
client/src/data/: mockKanbanData.ts
client/src/hooks/: useBoards.ts  useColumns.ts  useInviteMember.ts  useKanbanBoard.ts  useTasks.ts
client/src/pages/: Hello.tsx
client/src/routes/: AppRoutes.tsx
client/src/types/: auth.ts  board.ts  task.ts
client/src/utils/: SweetAlertHelper.tsx
server/: Dockerfile  README.md  pyproject.toml  requirements.txt
server/app/: database.py  main.py
server/app/core/: auth.py  security.py
server/app/models/: __init__.py  board_member_model.py  board_model.py  column_model.py  notification_model.py  tag_model.py  task_assignee_model.py  task_model.py  task_tag_model.py  user_model.py
server/app/routers/: __init__.py  auth.py  auth_router.py  board_members_router.py  boards.py  boards_router.py  columns.py  columns_router.py  notifications_router.py  tags_router.py  task_assignees_router.py  tasks.py  tasks_router.py  users.py  users_router.py
server/app/schemas/: assignee_schema.py  auth_schema.py  board_member_schema.py  board_schema.py  column_schema.py  notification_schema.py  tag_schema.py  task_assignee_schema.py  task_schema.py  user_schema.py
server/scripts/: run-api-dev.bat
(+12 files in other folders)
